# delavan-lake-fishing-reports

./: .gitignore  CLAUDE.md  README.md  blog-post.md
backend/: .env.example  api.py  database.py  location_mapper.py  processor.py  pw  pyproject.toml  recommender.py  requirements.txt  scraper.py  seeder.py
frontend/: .env.example  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Dashboard.css  Dashboard.tsx  MapView.css  MapView.tsx  ReportsTable.css  ReportsTable.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/map/: InteractiveLakeMap.tsx  MapControls.tsx  MapLegend.tsx  ZoneDetailPanel.tsx
frontend/src/components/recommendations/: TodayRecommendation.tsx
frontend/src/components/species/: SpeciesDirectory.tsx  SpeciesProfile.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  LoadingState.tsx  Modal.tsx  StatCard.tsx
frontend/src/hooks/: useQueries.ts  useTheme.ts
