[tool.pyprojectx]
uv = "uv==0.6.14"

[tool.pyprojectx.aliases]
install = "uv sync"
scrape = "uv run python scraper.py"
scrape-sample = "uv run python scraper.py --sample"
scrape-all = "uv run python scraper.py"
process = "uv run python processor.py"
serve = "uv run uvicorn api:app --reload --host 0.0.0.0 --port 8000"
test = "uv run pytest"

[project]
name = "delavan-lake-fishing-reports"
version = "0.1.0"
description = "Scraper and API for Delavan Lake fishing reports from Lake-Link"
authors = [
    {name = "Steven Gall"},
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
